Configure React app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-size: 16px;
+  align-items: center;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.5;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  letter-spacing: -0.05em;
+  font-weight: 600;
+}
+.account {
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+.SignUp {
+  max-width: 500px;
+  width: 100%;
+  height: 500px;
+  margin: 0 auto;
+  margin-top: 90px;
+  border: 2px solid grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ 
+}
+.SignIn {
+  max-width: 500px;
+  width: 100%;
+  height: 350px;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 10px;
+  border: 2px solid grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-field {
+  max-width: 400px;
+  width: 100%;
+  padding: 10px 5px;
+  display: block;
+  text-align: start;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  padding: 10px 5px;
+  margin-left: 30px;
+  margin-top: 20px;
+  text-align: start;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.checkbox {
+  margin-right: 10px;
+}
+button {
+  margin-left: 30px;
+  margin-top: 20px;
+  padding: 9px 5px;
+  max-width: 400px;
+  width: 100%;
+  border: none;
+  color: gray;
+}
+button:hover {
+  background-color: rgb(76, 13, 136);
+  color: aliceblue;
+}
+a {
+  text-decoration: none;
+  color: rgb(163, 87, 235);
+}
+.checkbox input:checked ~ .check {
+  background-color: rgb(163, 87, 235);
+}
+.Forgot {
+  margin-right: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-items: center; 
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
